fix: z-index upfront, color dist

--- a/popup.css
+++ b/popup.css
@@ -1,13 +1,12 @@
 #show-that-link-popup {
     position: absolute;
-    background-color: #fff;
-    border: 1px solid #ccc;
+    background-color: #f2f2f2;
+    border: 1px solid #bcbcbc;
     padding: 5px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
     font-size: 12px;
     color: #333;
-    z-index: 1000;
+    z-index: 9999999;
     max-width: 300px;
     word-wrap: break-word;
   }
-  
